add jwt authentication - add webSecurity - add accountController - add EmailService - add exception handler - add threadUtils and use when sending verify email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port:8081
 
+jwt.secret = boomMusicPlayer5665
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=jobshaar.khu@gmail.com
+spring.mail.password=kharazmiuni96
