--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,26 @@
-server.port:8081
+server.port:8082
 
-jwt.secret = boomMusicPlayer5665
+#database
+spring.datasource.url=jdbc:postgresql://localhost:5432/MusicPlayer
+spring.datasource.username=music
+spring.datasource.password=123Music!@#
+spring.jpa.hibernate.ddl-auto= none
 
+#jwt
+jwt.secret = beepMusicPlayer5665
+
+#email config
 spring.mail.host=smtp.gmail.com
 spring.mail.username=jobshaar.khu@gmail.com
 spring.mail.password=kharazmiuni96
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.rollback = false
+
+
+#file properties
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=200MB
+file.upload-dir=music
